--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.text_centered {
+  text-align: center;
+}
+
+.elem_centered {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.listGlobal {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
