--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -9,12 +9,19 @@
 }
 
 .sidebarItem {
-  padding: 10px;
+  padding: 12px 0;
 }
 
 .sidebarLink {
-  text-decoration: none;
-  color: #333333;
   display: flex;
   align-items: center;
+  gap: 12px;
+}
+
+.sidebarLinkBack {
+  color: var(--Main-colors-Headline-text, #0B1F35);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
 }
