--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,7 +1,7 @@
 .layout {
   display: grid;
   grid-template-columns: 360px 1fr; /* Ширина сайдбара 360px и оставшееся пространство для контента */
-  grid-template-rows: auto 1fr; /* Высота шапки auto и оставшееся пространство для контента */
+  grid-template-rows: auto 1fr auto; /* Высота шапки, содержимого и футера */
   height: 100vh; /* Полная высота вьюпорта */
   width: 100%;
 }
@@ -20,4 +20,9 @@
 .main{
   grid-column: 2; /* Основной контент занимает вторую колонку */
   grid-row: 2; /* Основной контент начинается после шапки */
+}
+
+.footer {
+  grid-column: 1 / -1; /* Футер растягивается на весь широкий ряд */
+  grid-row: 3; /* Футер располагается в третьей строке */
 }
