--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,6 +1,6 @@
 .layout {
   display: grid;
-  grid-template-columns: 360px 1fr; /* Ширина сайдбара 360px и оставшееся пространство для контента */
+  grid-template-columns: 193px 1fr; /* Ширина сайдбара 360px и оставшееся пространство для контента */
   grid-template-rows: auto 1fr auto; /* Высота шапки, содержимого и футера */
   height: 100vh; /* Полная высота вьюпорта */
   width: 100%;
@@ -18,6 +18,8 @@
 }
 
 .main{
+  margin-left: auto;
+  max-width: 1063px;
   grid-column: 2; /* Основной контент занимает вторую колонку */
   grid-row: 2; /* Основной контент начинается после шапки */
 }
