--- a/src/components/UserTab/UserTab.module.css
+++ b/src/components/UserTab/UserTab.module.css
@@ -1,29 +1,7 @@
-.userTabContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 0;
-    width: 100%;
+.textContainer {
+  overflow: hidden;
 }
 
-.userTabTitle {
-  color: var(--Main-colors-Main-text, #353539);
-  font-family: Roboto;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-  margin: 0;
-  padding: 0;
-}
-
-.userTabText {
-  color: var(--Main-colors-Tooltip-text, #BABBC2);
-  font-family: Roboto;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
-  margin: 0;
-  padding: 0;
+.text {
+  width: 100%;
 }
