--- a/src/components/TaskLine/TaskLine.module.css
+++ b/src/components/TaskLine/TaskLine.module.css
@@ -8,6 +8,9 @@
   padding: 16px;
   gap: 12px;
 }
+.taskName:hover{
+  cursor: pointer;
+}
 .taskText {
   margin: 0;
   width: 593px;
@@ -26,9 +29,15 @@
   align-items: center;
   padding: 16px;
   gap: 12px;
-  transition: opacity .3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
 }
-.taskDate:hover{
+.taskDateOff {
+  display: flex;
+  align-items: center;
+  padding: 16px;
+  gap: 12px;
+}
+.taskDate:hover {
   cursor: pointer;
   opacity: 0.6;
 }
@@ -41,9 +50,9 @@
   line-height: 20px;
   color: #353539;
 }
-.grey{
+.grey {
   composes: textDate;
-  color: #797A7E;
+  color: #797a7e;
 }
 .taskStatus {
   display: flex;
@@ -61,15 +70,34 @@
   line-height: 24px;
   color: #353539;
 }
+.textStatusGreen {
+  margin: 0;
+  width: 110px;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  color: #17d055;
+}
+.textStatusGrey {
+  margin: 0;
+  width: 110px;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  color: #797a7e;
+}
 .popoverList {
   list-style-type: none;
   margin: 0;
-  padding: 0;
-}
-.popover {
-  background: #EEEFF1;
-  border-radius: 0px 0px 6px 6px;
   padding: 24px;
+}
+.popoverEdit {
+  background: #eeeff1;
+  border-radius: 0px 0px 6px 6px;
 }
 .popoverItem {
   padding: 16px;
@@ -82,5 +110,55 @@
   color: #353539;
 }
 .popoverItem:nth-of-type(2) {
-  color: #F14539;
+  color: #f14539;
+}
+.calendarContainer {
+  width: 254px;
+  height: 295px;
+}
+.downArrow {
+  transition: transform 0.3s ease-in-out;
+}
+.downArrow:hover {
+  cursor: pointer;
+  transform: scale(1.2, 1.2);
+}
+.popoverTask {
+  padding: 56px;
+  border: 1px solid #d5d6dc;
+  box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.15);
+}
+.radioGroup {
+  background: #eeeff1;
+  padding: 20px 12px 24px 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.radioContainer {
+  width: 156px;
+}
+.radioCircle {
+  background: #eeeff1;
+}
+.radioText {
+  margin: 0;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  color: #353539;
+}
+.radioTextGreen {
+  margin: 0;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  color: #17d055;
+}
+.greyBg{
+   background-color: #797a7e;
 }
