--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   max-width: 1280px;
-  margin: 32px auto;
+  margin: var(--gap-2xl) auto var(--gap-5xl);
 }
 .searchInput {
   width: 372px;
