--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,9 +2,8 @@
   height: 124px;
   display: flex;
   flex-direction: row;
-  justify-content: center;
   align-items: center;
-  padding: 0 20px;
+  padding-left: 217px;
 }
 
 .footerList {
