--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -21,7 +21,6 @@
   object-fit: contain;
   position: relative;
   top: 4px;
-  margin-right: 5px;
 }
 
 .profile {
@@ -40,7 +39,7 @@
   transform: scale(1.2, 1.2);
   cursor: pointer;
 }
-.popover{
+.popover {
   border-radius: 5px;
 }
 .popoverList {
@@ -48,19 +47,19 @@
   margin: 0;
   padding: 5px;
 }
-.popoverItem{
+.popoverItem {
   padding: 5px;
   border-bottom: 2px solid white;
   transition: border-bottom 0.3s ease-in-out;
 }
-.popoverItem:nth-of-type(1){
+.popoverItem:nth-of-type(1) {
   margin-bottom: 5px;
 }
-.popoverItem:hover{
+.popoverItem:hover {
   cursor: pointer;
   border-bottom: 2px solid #353539;
 }
-.popoverMain{
+.popoverMain {
   margin: 5px;
 }
 .popoverHeader {
@@ -89,4 +88,7 @@
   font-weight: 400;
   line-height: 20px;
   color: #353539;
+}
+.link {
+  margin-right: 45px;
 }
