feat: add scrolls and fix taskline

--- a/src/components/TaskForm/TaskForm.module.css
+++ b/src/components/TaskForm/TaskForm.module.css
@@ -3,7 +3,8 @@
   padding-bottom: 32px;
 }
 .textDescription{
-margin: 32px 0 24px 0;
+padding: 32px 0 24px 0;
+margin: 0;
 }
 .buttons{
   padding-top: 36px;
@@ -17,4 +18,7 @@ margin: 32px 0 24px 0;
 .textareaForm{
   max-height: 248px;
   padding: 2px 11px;
+}
+.fieldInput{
+  margin-bottom: 24px;
 }
