--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root:root {
   --color-white: #fff;
+  --color-accent: #EF3124;
   --color-success: #17D055;
   --color-failure: #F14539;
   --color-tooltip: #BABBC2;
