trying to lookig for subord without IPRP; on backend no id for employee; and only 5 results on one page; so there is no point in filtering at the front; waiting for new endpoint or smth else;

--- a/src/components/TableIPRForSubord/TableIPRForSubord.module.css
+++ b/src/components/TableIPRForSubord/TableIPRForSubord.module.css
@@ -3,3 +3,9 @@
   display: flex;
   align-items: center;
 }
+
+.forRow {
+  grid-column: span 3;
+  display: grid;
+  grid-template-columns: 36.218% 42.897% 18% 1fr;
+}
