--- a/src/components/SuccessfulModal/SuccessfulModal.module.css
+++ b/src/components/SuccessfulModal/SuccessfulModal.module.css
@@ -1,36 +1,3 @@
-.taskForm {
-  max-width: 501px;
-  padding-bottom: 32px;
-}
-.textDescription {
-  padding: 32px 0 24px 0;
-  margin: 0;
-}
-.buttons {
-  padding-top: 36px;
-  width: 331px;
-  display: flex;
-  gap: 16px;
-}
-.taskButton {
-  padding: 0 28px 0 28px;
-}
-.saveButton {
-  composes: taskButton;
-  width: max-content;
-  min-width: none;
-}
-.textSaveButton{
-  margin: 0;
-  width: max-content;
-}
-.textareaForm {
-  max-height: 248px;
-  padding: 2px 11px;
-}
-.fieldInput {
-  margin-bottom: 24px;
-}
 .modal {
   width: 471px;
   margin-bottom: 0;
@@ -54,6 +21,7 @@
   bottom: 0;
   top: 0;
   left: 0;
+  z-index: 100;
   background-color: rgba(255, 255, 255, 0.336);
   backdrop-filter: blur(1px);
 }
