--- a/src/components/TaskLine/TaskLine.module.css
+++ b/src/components/TaskLine/TaskLine.module.css
@@ -1,17 +1,19 @@
 .taskLine {
   display: flex;
   align-items: center;
+  transition: background-color 0.3s ease-in-out;
 }
 .taskName {
-  transition: transform 0.3s ease-in-out;
+  padding: 16px;
+  width: 547px;
 }
-.taskName:hover {
-  cursor: pointer;
-  transform: scale(1.05, 1.05);
+
+.taskLine:hover {
+  background-color: #35353917;
+  border-radius: 10px;
 }
 .taskText {
   margin: 0;
-  width: 547px;
   font-family: Roboto;
   font-size: 16px;
   font-style: normal;
@@ -27,7 +29,7 @@
   align-items: center;
   padding: 16px;
   gap: 12px;
-  transition: opacity 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 .taskDateOff {
   display: flex;
@@ -37,7 +39,7 @@
 }
 .taskDate:hover {
   cursor: pointer;
-  opacity: 0.6;
+  transform: scale(1.05, 1.05);
 }
 .textDate {
   margin: 0;
@@ -108,7 +110,7 @@
   color: #353539;
   transition: transform 0.3s ease-in-out;
 }
-.blackText{
+.blackText {
   color: #353539;
   text-decoration: none;
 }
@@ -169,12 +171,16 @@
   cursor: pointer;
   transform: scale(1.2, 1.2);
 }
-.anchor{
-  display: flex;
-  align-items: center;
-  padding: 16px;
-  gap: 12px;
-  display: flex;
+.anchor {
+  width: max-content;
   color: #353539;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  transition: transform 0.3s ease-in-out;
+}
+.anchor:hover {
+  cursor: pointer;
+  transform: scale(1.05, 1.05);
 }
