--- a/src/components/Сomments/Сomments.module.css
+++ b/src/components/Сomments/Сomments.module.css
@@ -1,7 +1,6 @@
 .commentsContainer {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   min-height: 400px;
 }
 .text {
@@ -15,9 +14,10 @@
   color: #353539;
 }
 .field {
-  width: 372px;
-  height: 60px;
-  margin-bottom: 24px;
+  width: 372px !important;
+  border-top: 0px solid transparent !important;
+  border-bottom: 0px solid transparent !important;
+  padding: 24px 12px 12px 12px;
 }
 .input {
   padding-top: 24px;
@@ -53,6 +53,7 @@
 .comments {
   display: flex;
   flex-direction: column;
+  min-height: 100px;
   max-height: 600px;
   gap: 24px;
   list-style-type: none;
@@ -63,3 +64,4 @@
   composes: comments;
   overflow-y: scroll;
 }
+
