feat: some logic and design on IPRs page fix: authorization when reload website fix: API types for IPRs and comment

--- a/src/components/TableIPRForSubord/TableIPRForSubord.module.css
+++ b/src/components/TableIPRForSubord/TableIPRForSubord.module.css
@@ -9,3 +9,17 @@
   display: grid;
   grid-template-columns: 36.218% 42.897% 18% 1fr;
 }
+
+.forSpinner {
+  grid-column: span 3;
+  display: flex;
+  height: 120px;
+  justify-content: center;
+}
+
+.forError {
+  padding-top: var(--gap-xl);
+  grid-column: span 3;
+  display: flex;
+  justify-content: center;
+}
