fix: button text, comments, delete func

--- a/src/components/TaskForm/TaskForm.module.css
+++ b/src/components/TaskForm/TaskForm.module.css
@@ -17,8 +17,8 @@
 }
 .saveButton {
   composes: taskButton;
-  width: max-content;
-  min-width: none;
+  /* width: max-content; */
+  min-width: max-content;
 }
 .textSaveButton{
   margin: 0;
