--- a/src/components/TableMyIPR/TableMyIPR.module.css
+++ b/src/components/TableMyIPR/TableMyIPR.module.css
@@ -26,3 +26,17 @@
   flex-direction: row;
   flex-wrap: wrap;
 }
+
+.forSpinner {
+  grid-column: span 3;
+  display: flex;
+  height: 120px;
+  justify-content: center;
+}
+
+.forError {
+  padding-top: var(--gap-xl);
+  grid-column: span 3;
+  display: flex;
+  justify-content: center;
+}
