--- a/src/components/TitleInput/TitleInput.module.css
+++ b/src/components/TitleInput/TitleInput.module.css
@@ -1,6 +1,7 @@
 .inputContainer {
   position: relative;
   width: 100%;
+  height: 92px;
 }
 
 .input {
@@ -44,12 +45,13 @@
   font-style: normal;
   font-weight: 400;
   line-height: 20px; /* 142.857% */
+  position: absolute;
+  bottom: 0;
 }
 
 .penIcon, .clearIcon {
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 24px;
   right: 12px;
   cursor: pointer;
 
