--- a/src/components/TaskLine/TaskLine.module.css
+++ b/src/components/TaskLine/TaskLine.module.css
@@ -76,6 +76,10 @@
   line-height: 24px;
   color: #353539;
 }
+.textStatusRed {
+  composes: textStatus;
+  color: #F14539;
+}
 .textStatusGreen {
   composes: textStatus;
   color: #17d055;
@@ -142,7 +146,7 @@
   background: #eeeff1;
 }
 .radioText {
-  margin: 0;
+  margin: 0 0 0 12px;
   font-family: Roboto;
   font-size: 16px;
   font-style: normal;
@@ -151,12 +155,7 @@
   color: #353539;
 }
 .radioTextGreen {
-  margin: 0;
-  font-family: Roboto;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
+  composes: radioText;
   color: #17d055;
 }
 .greyBg {
